crates/model/tests/compile_fail/fsm_transition_bad_source.stderr
error: transition source `ghost` not found in states list
  --> tests/compile_fail/fsm_transition_bad_source.rs:11:24
   |
11 |         transitions: { ghost => idle },
   |                        ^^^^^
